published on github pages and added link to navBar

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
          </div> <!-- pop-up events drop down ends here -->
             
             <a href=" https://ziglewis.github.io/YPF-Anambra1-gallery-page/"><div class="color-fill">GALLERY </div></a>
-            <a href=""><div class="color-fill">CONTACT US </div></a>
+            <a href="https://ziglewis.github.io/YPF-Anambra1-Contact-Us-Page/"><div class="color-fill">CONTACT US </div></a>
             <a href=""><div class="color-fill">BLOG</div></a>
         </div> <!-- pop-up menu ends here -->
 
@@ -61,7 +61,7 @@
              <div class="color-fill navbar-events">EVENTS<span id ="arrow">▼</span>
             </div>
             <a href=" https://ziglewis.github.io/YPF-Anambra1-gallery-page/"><div class="color-fill">GALLERY </div></a>
-            <a href=""><div class="color-fill">CONTACT US </div></a>
+            <a href="https://ziglewis.github.io/YPF-Anambra1-Contact-Us-Page/"><div class="color-fill">CONTACT US </div></a>
             <a href=""><div class="color-fill">BLOG</div></a>
         </div>
         <div class="minimize-icon">
