--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <div class="map">
             <h1>Find Us Here</h1>
-            <a href=" https://www.google.com/maps/dir//5Q6R%2B932,+GRA+434108,+Onitsha,+Anambra/@6.1577626,6.7942617,15.03z/data=!4m8!4m7!1m0!1m5!1m1!1s0x104393c1fca2b659:0xe23c2d8e182c3e5a!2m2!1d6.7900961!2d6.1608693?entry=ttu"> 
+            <a href=" https://www.google.com/maps/dir//5Q6R%2B932,+GRA+434108,+Onitsha,+Anambra/@6.1577626,6.7942617,15.03z/data=!4m8!4m7!1m0!1m5!1m1!1s0x104393c1fca2b659:0xe23c2d8e182c3e5a!2m2!1d6.7900961!2d6.1608693?entry=ttu" target="_blank"> 
                 <img src="images/GraMap.png" alt="clickable google map of YPF Onitsha location in GRA Onitsha near ShopRite">
             </a>
 
