kept code to two colors alone

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             
         </figure>
 
-            <h2>Information</h2>
+            <h2>Information:</h2>
             <ul>
                 <li>From Seaman bus stop or Main market, drive or board a vehicle heading to Awka road, stop at "A-B-S" junction by ShopRite.</li>
                 <li>Drive towards or board a tricycle (Keke) heading to GRA gate, stop infront of the GRA gate.</li>
