added media query and <wbr> to phone number

--- a/index.html
+++ b/index.html
@@ -163,6 +163,12 @@
     </div>  <!-- The form and map section ends here -->
 
 
+    <div class="meet-up-locations">   <!-- The MEET-UP Locations div starts here -->
+
+        <h1>MEET-UP LOCATIONS</h1>
+
+    </div>
+
 
 
 
@@ -188,7 +194,7 @@
                                     <h2>STAY IN TOUCH</h2>
                                     <div class="stay-in-touch-items-container"> 
                                    <div class="stay-in-touch-each-items"> <i class="fa fa-envelope" aria-hidden="true"></i> <p>Onitsha, Anambra</p> </div>
-                                   <div class="stay-in-touch-each-items"> <i class="fa fa-phone" aria-hidden="true"></i><p>+2349053770644</p> </div>
+                                   <div class="stay-in-touch-each-items"> <i class="fa fa-phone" aria-hidden="true"></i><p>+234<wbr>9053770644</p> </div>
                                   <div class="stay-in-touch-each-items">  <i class="fa fa-map-marker" aria-hidden="true"></i><p>our website.com</p> </div>
                                   </div>
 
