formatted the phone number with hyphen for UIUX

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <li>Drive or walk straight into GRA, our location will be at about 5 electric poles from the gate and by your left hand side.</li>
             </ul>
             <p>GRA Onitsha, Anambra State.</p>
-            <p>Phone: +234 9053770644 </p>
+            <p>Phone: +234-905-377-0644 </p>
             <p>Email: .....@ypf.gmail.com</p>
             <div class="contact-social-icons">
 
