added appropriate divs for displaying locations

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <div class="all-location-container">
 
             <div class="each-location">                 <!-- each-location starts -->
-                <h3> </h3>
+                <h3> ONITSHA CHAPTER</h3>
                 <div class="each-location-units">       <!-- each-location-units starts  -->   
                 <div class="each-unit-box"> </div>    
                 <div class="each-unit-box"> </div> 
@@ -186,7 +186,7 @@
 
 
             <div class="each-location">                 <!-- each-location starts -->
-                <h3> </h3>
+                <h3>Ogbaru Chapter</h3>
                 <div class="each-location-units">       <!-- each-location-units starts  -->   
                 <div class="each-unit-box"> </div>    
                 <div class="each-unit-box"> </div> 
@@ -205,7 +205,7 @@
 
 
             <div class="each-location">                 <!-- each-location starts -->
-                <h3> </h3>
+                <h3>Obosi Chapter</h3>
                 <div class="each-location-units">       <!-- each-location-units starts  -->   
                 <div class="each-unit-box"> </div>    
                 <div class="each-unit-box"> </div> 
@@ -225,7 +225,7 @@
 
 
             <div class="each-location">                 <!-- each-location starts -->
-                <h3> </h3>
+                <h3>Nnewi Chapter</h3>
                 <div class="each-location-units">       <!-- each-location-units starts  -->   
                 <div class="each-unit-box"> </div>    
                 <div class="each-unit-box"> </div> 
@@ -243,7 +243,7 @@
 
 
             <div class="each-location">                 <!-- each-location starts -->
-                <h3> </h3>
+                <h3>Oba Chapter </h3>
                 <div class="each-location-units">       <!-- each-location-units starts  -->   
                 <div class="each-unit-box"> </div>    
                 <div class="each-unit-box"> </div> 
@@ -258,7 +258,7 @@
 
 
 
-            
+
 
 
         </div>        <!-- all-location-container ends -->
