took control of all intended dropDown

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
     </div>  <!-- The form and map section ends here -->
 
 
+   
     <div class="meet-up-locations">   <!-- The MEET-UP Locations div starts here -->
 
         <h1>MEET-UP LOCATIONS</h1>
@@ -171,7 +172,7 @@
                 <h3> ONITSHA CHAPTER</h3>
                 <div class="each-location-units">       <!-- each-location-units starts  -->   
                         <div class="each-unit-box"> 
-                            <h3>OMAGBA <span>▲</span></h3>
+                            <div class="Geo-Address" > <h3>OMAGBA <span>▲</span></h3> </div>
                                 <div class="hidden-content">
                                     <h4>YPF Meet-up Venue</h4>
                                     <p>Unit Name: Joint Heirs</p>
@@ -187,7 +188,7 @@
 
 
                         <div class="each-unit-box"> 
-                            <h3>GRA <span>▲</span></h3>
+                            <div class="Geo-Address" > <h3>GRA <span>▲</span></h3> </div>
                                 <div class="hidden-content">
                                     <h4>YPF Meet-up Venue</h4>
                                     <p>Unit Name: Peace Makers</p>
@@ -202,7 +203,7 @@
 
 
                         <div class="each-unit-box"> 
-                            <h3>3-3, Akpaka <span>▲</span></h3>
+                           <div class="Geo-Address" > <h3>3-3, Akpaka <span>▲</span></h3> </div>
                                 <div class="hidden-content">
                                     <h4>YPF Meet-up Venue</h4>
                                     <p>Unit Name: Fruitful Vine</p>
@@ -218,7 +219,7 @@
 
 
                         <div class="each-unit-box"> 
-                            <h3>Ogidi, Umunya <span>▲</span></h3>
+                            <div class="Geo-Address" ><h3>Ogidi, Umunya <span>▲</span></h3> </div>
                                 <div class="hidden-content">
                                     <h4>YPF Meet-up Venue</h4>
                                     <p>Unit Name: Apostolic Ambassadors</p>
@@ -233,7 +234,7 @@
 
 
                         <div class="each-unit-box"> 
-                            <h3>Oduakpu, Feggae <span>▲</span></h3>
+                           <div class="Geo-Address" > <h3 >Oduakpu, Feggae <span>▲</span></h3></div>
                                 <div class="hidden-content">
                                     <h4>YPF Meet-up Venue</h4>
                                     <p>Unit Name: Burden Bearers 1</p>
@@ -367,8 +368,6 @@
 
 
     </div>  <!-- The MEET-UP Locations div ends here -->
-
-
 
 
 
