--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
    
     <div class="meet-up-locations">   <!-- The MEET-UP Locations div starts here -->
 
-        <h1>MEET-UP LOCATIONS</h1>
+        <h1>meet-up locations</h1>
 
         <div class="all-location-container">
 
@@ -172,7 +172,7 @@
                 <h3> ONITSHA CHAPTER</h3>
                 <div class="each-location-units">       <!-- each-location-units starts  -->   
                         <div class="each-unit-box"> 
-                            <div class="Geo-Address" > <h3>OMAGBA <span>▲</span></h3> </div>
+                            <div class="Geo-Address" > <h4>OMAGBA <span>▲</span></h4> </div>
                                 <div class="hidden-content">
                                     <h4>YPF Meet-up Venue</h4>
                                     <p>Unit Name: Joint Heirs</p>
@@ -188,7 +188,7 @@
 
 
                         <div class="each-unit-box"> 
-                            <div class="Geo-Address" > <h3>GRA <span>▲</span></h3> </div>
+                            <div class="Geo-Address" > <h4>GRA <span>▲</span></h4> </div>
                                 <div class="hidden-content">
                                     <h4>YPF Meet-up Venue</h4>
                                     <p>Unit Name: Peace Makers</p>
@@ -203,7 +203,7 @@
 
 
                         <div class="each-unit-box"> 
-                           <div class="Geo-Address" > <h3>3-3, Akpaka <span>▲</span></h3> </div>
+                           <div class="Geo-Address" > <h4>3-3, Akpaka <span>▲</span></h4> </div>
                                 <div class="hidden-content">
                                     <h4>YPF Meet-up Venue</h4>
                                     <p>Unit Name: Fruitful Vine</p>
@@ -219,7 +219,7 @@
 
 
                         <div class="each-unit-box"> 
-                            <div class="Geo-Address" ><h3>Ogidi, Umunya <span>▲</span></h3> </div>
+                            <div class="Geo-Address" ><h4>Ogidi, Umunya <span>▲</span></h4> </div>
                                 <div class="hidden-content">
                                     <h4>YPF Meet-up Venue</h4>
                                     <p>Unit Name: Apostolic Ambassadors</p>
@@ -234,7 +234,7 @@
 
 
                         <div class="each-unit-box"> 
-                           <div class="Geo-Address" > <h3 >Oduakpu, Feggae <span>▲</span></h3></div>
+                           <div class="Geo-Address" > <h4>Oduakpu, Feggae <span>▲</span></h4></div>
                                 <div class="hidden-content">
                                     <h4>YPF Meet-up Venue</h4>
                                     <p>Unit Name: Burden Bearers 1</p>
@@ -289,7 +289,7 @@
 
 
             <div class="each-location">                 <!-- each-location starts -->
-                <h3>Ogbaru Chapter</h3>
+                <h3>OGBARU CHAPTER</h3>
                 <div class="each-location-units">       <!-- each-location-units starts  -->   
                 <div class="each-unit-box"> </div>    
                 <div class="each-unit-box"> </div> 
@@ -308,7 +308,7 @@
 
 
             <div class="each-location">                 <!-- each-location starts -->
-                <h3>Obosi Chapter</h3>
+                <h3>OBOSI CHAPTER</h3>
                 <div class="each-location-units">       <!-- each-location-units starts  -->   
                 <div class="each-unit-box"> </div>    
                 <div class="each-unit-box"> </div> 
@@ -328,7 +328,7 @@
 
 
             <div class="each-location">                 <!-- each-location starts -->
-                <h3>Nnewi Chapter</h3>
+                <h3>NNEWI CHAPTER</h3>
                 <div class="each-location-units">       <!-- each-location-units starts  -->   
                 <div class="each-unit-box"> </div>    
                 <div class="each-unit-box"> </div> 
@@ -346,7 +346,7 @@
 
 
             <div class="each-location">                 <!-- each-location starts -->
-                <h3>Oba Chapter </h3>
+                <h3>OBA CHAPTER </h3>
                 <div class="each-location-units">       <!-- each-location-units starts  -->   
                 <div class="each-unit-box"> </div>    
                 <div class="each-unit-box"> </div> 
