--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                                     <p>Contact Number: +234-813-218-0402</p>
                                     <p>Time: 1pm</p>
                                     <p>Day: Sunday</p>
-                                    <a href=""> <button class="units-map-btn"><i class="fa fa-map-marker" aria-hidden="true"></i> view on map</button>  </a>
+                                    <a href="https://www.google.com/maps/place/Deeper+Life+Bible+Church,+Heritage+Group/@6.1500534,6.813847,18.47z/data=!4m16!1m9!4m8!1m0!1m6!1m2!1s0x104393c1fca2b659:0xe23c2d8e182c3e5a!2s5Q6R%2B932,+GRA+434108,+Onitsha,+Anambra!2m2!1d6.7900961!2d6.1608693!3m5!1s0x10439329f5c04cb3:0x18bca6b956b51976!8m2!3d6.1498998!4d6.8143844!16s%2Fg%2F11gm8hxp1_?entry=ttu" target="_blank"> <button class="units-map-btn"><i class="fa fa-map-marker" aria-hidden="true"></i> view on map</button>  </a>
                                 </div>
                         </div>   
 
@@ -212,7 +212,7 @@
                                     <p>Contact Number: +234-811-201-2491</p>
                                     <p>Time: 12pm (Noon)</p>
                                     <p>Day: Sunday</p>
-                                    <a href=""> <button class="units-map-btn"><i class="fa fa-map-marker" aria-hidden="true"></i> view on map</button>  </a>
+                                    <a href="https://www.google.com/maps/place/Deeper+Life+Bible+Church/@6.1761227,6.7958132,18.45z/data=!4m16!1m9!4m8!1m0!1m6!1m2!1s0x104393c1fca2b659:0xe23c2d8e182c3e5a!2s5Q6R%2B932,+GRA+434108,+Onitsha,+Anambra!2m2!1d6.7900961!2d6.1608693!3m5!1s0x104393be6811a18b:0x325ec1f2c3c57e93!8m2!3d6.176332!4d6.7964008!16s%2Fg%2F11kc43rdcw?entry=ttu" target="_blank"> <button class="units-map-btn"><i class="fa fa-map-marker" aria-hidden="true"></i> view on map</button>  </a>
                                 </div>
                         </div>   
 
@@ -228,7 +228,7 @@
                                     <p>Contact Number: +234-706-135-5866</p>
                                     <p>Time: 1pm</p>
                                     <p>Day: Sunday</p>
-                                    <a href=""> <button class="units-map-btn"><i class="fa fa-map-marker" aria-hidden="true"></i> view on map</button>  </a>
+                                    <a href="https://www.google.com/maps/place/DEEPER+LIFE+BIBLE+CHURCH+STATE+HEADQUARTERS/@6.2216478,6.9047183,17.28z/data=!4m9!1m2!2m1!1sfresh+focus+sanctuary!3m5!1s0x10438f2c1e7f775d:0x42f2e9dcf8e550c4!8m2!3d6.2226954!4d6.904993!16s%2Fg%2F11thqmdfrh?entry=ttu" target="_blank"> <button class="units-map-btn"><i class="fa fa-map-marker" aria-hidden="true"></i> view on map</button>  </a>
                                 </div>
                         </div>  
 
