--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                                     <p>Contact Number: +234-806-171-8762</p>
                                     <p>Time: 1pm</p>
                                     <p>Day: Sunday</p>
-                                    <a href=""> <button class="units-map-btn"><i class="fa fa-map-marker" aria-hidden="true"></i> view on map</button>  </a>
+                                    <a href="https://www.google.com/maps/place/Deeper+Life+Bible+Church/@6.1442443,6.7913764,16.14z/data=!4m10!1m2!2m1!1sDeeper+Life+Bible+Church+near+Fegge,+Onitsha!3m6!1s0x104393a8a68a0777:0xfba201bb3ce41429!8m2!3d6.141663!4d6.7966835!15sCixEZWVwZXIgTGlmZSBCaWJsZSBDaHVyY2ggbmVhciBGZWdnZSwgT25pdHNoYSIDiAEBkgENZ29zcGVsX2NodXJjaOABAA!16s%2Fg%2F11c6cwz1_6?entry=ttu" target="_blank"> <button class="units-map-btn"><i class="fa fa-map-marker" aria-hidden="true"></i> view on map</button>  </a>
 
                                         <br>
                                         <br>
@@ -256,7 +256,7 @@
                                         <p>Contact Number: +234-816-189-5042</p>
                                         <p>Time: 1pm</p>
                                         <p>Day: Sunday</p>
-                                        <a href=""> <button class="units-map-btn"><i class="fa fa-map-marker" aria-hidden="true"></i> view on map</button>  </a>
+                                        <a href="https://www.google.com/maps/place/Deeper+Life+Bible+Church/@6.1442443,6.7913764,16.14z/data=!4m10!1m2!2m1!1sDeeper+Life+Bible+Church+near+Fegge,+Onitsha!3m6!1s0x104393a8a68a0777:0xfba201bb3ce41429!8m2!3d6.141663!4d6.7966835!15sCixEZWVwZXIgTGlmZSBCaWJsZSBDaHVyY2ggbmVhciBGZWdnZSwgT25pdHNoYSIDiAEBkgENZ29zcGVsX2NodXJjaOABAA!16s%2Fg%2F11c6cwz1_6?entry=ttu" target="_blank"> <button class="units-map-btn"><i class="fa fa-map-marker" aria-hidden="true"></i> view on map</button>  </a>
     
 
 
