--- a/index.html
+++ b/index.html
@@ -121,16 +121,17 @@
             <a href=" https://www.google.com/maps/dir//5Q6R%2B932,+GRA+434108,+Onitsha,+Anambra/@6.1577626,6.7942617,15.03z/data=!4m8!4m7!1m0!1m5!1m1!1s0x104393c1fca2b659:0xe23c2d8e182c3e5a!2m2!1d6.7900961!2d6.1608693?entry=ttu" target="_blank"> 
                 <img src="images/map7.png" alt="clickable google map of YPF Onitsha location in GRA Onitsha near ShopRite">
             </a>
-            <figcaption>Click on map for direction.</figcaption>
+            <figcaption>Click on the map for direction.</figcaption>
             
         </figure>
 
             <h2>Information:</h2>
             <ul>
-                <li>From Seaman bus stop or Main market, drive or board a vehicle heading to Awka road, stop at "A-B-S" junction by ShopRite.</li>
+                <li>From Zik roundabout or Main market, drive or board a vehicle heading towards Awka road, stop at "A-B-S" junction by ShopRite.</li>
                 <li>Drive towards or board a tricycle (Keke) heading to GRA gate, stop in front of the GRA gate.</li>
                 <li>Drive or walk straight into GRA, our location will be at about 5 electric poles from the gate and by your left hand side.</li>
             </ul>
+            
             <p>GRA Onitsha, Anambra State.</p>
             <p>Phone: +234-905-377-0644 </p>
             <p>Email: .....@ypf.gmail.com</p>
