linked the blog page to to the navbar

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             
             <a href=" https://ziglewis.github.io/YPF-Anambra1-gallery-page/"><div class="color-fill">GALLERY </div></a>
             <a href="https://ziglewis.github.io/YPF-Anambra1-Contact-Us-Page/"><div class="color-fill">CONTACT US </div></a>
-            <a href=""><div class="color-fill">BLOG</div></a>
+            <a href="https://ziglewis.github.io/YPF_Anambra_Blog_Page/"><div class="color-fill">BLOG</div></a>
         </div> <!-- pop-up menu ends here -->
 
 
@@ -62,7 +62,7 @@
             </div>
             <a href=" https://ziglewis.github.io/YPF-Anambra1-gallery-page/"><div class="color-fill">GALLERY </div></a>
             <a href="https://ziglewis.github.io/YPF-Anambra1-Contact-Us-Page/"><div class="color-fill">CONTACT US </div></a>
-            <a href=""><div class="color-fill">BLOG</div></a>
+            <a href="https://ziglewis.github.io/YPF_Anambra_Blog_Page/"><div class="color-fill">BLOG</div></a>
         </div>
         <div class="minimize-icon">
             <img src="images/white-minimize-btn-removebg-preview.png" width="30px" height="30px">
