--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                <div class="form-and-map-form-section">
                 <h1> Contact Us</h1>
 
-            <form action=".....formpree" method="post"> 
+            <form action="https://formspree.io/f/xdorowlo" method="post"> 
                
                 <fieldset class = "Personal-details">
                     <label for="yourName" value = "Their Name" > 
@@ -483,17 +483,15 @@
                                 <a href="linkkk"><p>&gt Business</p></a>
 
                             </div>
-
                             <div class="news-letter contact-us-items">
-                                 <h2>GET OUR NEWSLETTER</h2>
-                                <form action=".....formpree" method="post"> 
-                                    <input id="email" type="email" required placeholder=" Enter Your Email">
-                                    <input id="telephone" type="tel"   placeholder="Enter Your Phone Number" >
-                                    <input id="subscribe" type="submit" value="SUBSCRIBE">
-                                </form>
+                                <h2>GET OUR NEWSLETTER</h2>
+                               <form action="https://formspree.io/f/xnqkqgze" method="post" onclick="location.reload()"> 
+                                   <input id="email" type="email" name="Email" required placeholder=" Enter Your Email">
+                                   <input id="telephone" type="tel" name="Phone Number"  placeholder="Enter Your Phone Number" >
+                                   <input id="subscribe" type="submit" value="SUBSCRIBE">
+                               </form>
 
-                            </div>
-
+                           </div>
 
 
                     
