--- a/index.html
+++ b/index.html
@@ -485,10 +485,10 @@
                             </div>
                             <div class="news-letter contact-us-items">
                                 <h2>GET OUR NEWSLETTER</h2>
-                               <form action="https://formspree.io/f/xnqkqgze" method="post" > 
+                               <form action="https://formspree.io/f/xnqkqgze" method="post"> 
                                    <input id="email" type="email" name="Email" required placeholder=" Enter Your Email">
                                    <input id="telephone" type="tel" name="Phone Number"  placeholder="Enter Your Phone Number" >
-                                   <input id="subscribe" type="submit" value="SUBSCRIBE" >
+                                   <input type="button" value="SUBSCRIBE" id="subscribe">
                                </form>
 
                            </div>
@@ -498,7 +498,7 @@
 
                 
 
-                </div>  <!-- The 8th section marking the footer ends -->
+                </div>  <!-- The 8th section marking the footer ends. -->
 
                         <footer> 
                             <div class="footer-writeup">
