modified js and html

--- a/index.html
+++ b/index.html
@@ -486,11 +486,12 @@
 
                             <div class="blog contact-us-items">
                                 <h2>LATEST BLOG POST</h2>
-                                <a href="linkkk"><p>&gt Health </p></a>
-                                <a href="linkkk"><p>&gt Technology</p></a>
-                                <a href="linkkk"><p>&gt Relationship</p></a>
-                                <a href="linkkk"><p>&gt Spiritual</p></a>
-                                <a href="linkkk"><p>&gt Business</p></a>
+                                <a><p>&gt Motivation</p></a>
+                                <a><p>&gt Health </p></a>
+                                <a><p>&gt Technology</p></a>
+                                <a><p>&gt Relationship</p></a>
+                                <a><p>&gt Spiritual</p></a>
+                                <a><p>&gt Business</p></a>
 
                             </div>
 
