added id of meetUp to draw link to it from homepg

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
    
     <div class="meet-up-locations">   <!-- The MEET-UP Locations div starts here -->
 
-        <h1>meet-up locations</h1>
+        <h1 id="meetUp">meet-up locations</h1>
 
         <div class="all-location-container">
 
