took id="sunday-meet-Up" to icon for top space

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     <i class="fab fa-telegram"></i>
                 </a></div>
 
-                <div class="contact-us-social-icons"><a href="https://chat.whatsapp.com/CM1MZJ84qdL4J0NQLDjUwC" target="_blank"> 
+                <div class="contact-us-social-icons" id="sunday-meet-Up"><a href="https://chat.whatsapp.com/CM1MZJ84qdL4J0NQLDjUwC" target="_blank"> 
                     <i id="contact-us-whatsapp-icon" class="fab fa-whatsapp"></i>
                 </a></div>
          </div>
@@ -166,7 +166,7 @@
 
     
 
-        </div> <!--The map section ends here  -->
+        </div > <!--The map section ends here  -->
 
 
     </div>  <!-- The form and map section ends here -->
@@ -175,7 +175,7 @@
    
     <div class="meet-up-locations">   <!-- The MEET-UP Locations div starts here -->
 
-        <h1 id="sunday-meet-Up">meet-up locations</h1>
+        <h1>meet-up locations</h1>
 
         <div class="all-location-container">
 
